--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,15 @@
   width: 100%;
 }
 
+nav {
+  .mat-toolbar {
+    background-color: transparent;
+    .mat-icon-button {
+      font-size: 20px;
+    }
+  }
+}
+
 header {
   color: #fff;
   text-align: center;
