--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,7 +21,7 @@
       <a
         mat-flat-button
         color="primary"
-        [routerLink]="['/shirts']"
+        [routerLink]="['/camisetas']"
         routerLinkActive="router-link-active"
       >
         <mat-icon>link</mat-icon> Ver las camisetas de AlmeríaJS
