feat: add social links

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -25,6 +25,14 @@
       >
         <i class="fab fa-github"></i>
       </a>
+      <a
+        mat-icon-button
+        color="accent"
+        href="mailto:js@almeria.dev"
+        target="_blank"
+      >
+        <i class="fas fa-envelope"></i>
+      </a>
     </mat-toolbar-row>
   </mat-toolbar>
 </footer>
