--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,17 +5,32 @@
     <p>Te damos la bienvenida a AlmeríaJS.</p>
     <p>Somos un grupo de apasionados de la tecnología que nos juntamos cada vez que tenemos ocasión para hablar de cualquier tema relacionado con Javascript.</p>
     <p>Si quieres colaborar de cualquier manera con el grupo, ya sea dando una charla, compartiendo el contenido, o cualquier cosa que se te ocurra, te lo agradecemos.</p>
-    <p style=" text-align: center; ">
+    <p class="links">
       <a
         mat-flat-button
         color="accent"
-        href="mailto:alvaro.quiros@gmail.com?subject=Hola AlmeríaJS"
+        href="https://twitter.com/almeriajs"
       >
-        <mat-icon> link </mat-icon> ¡Envíanos un correo electrónico!
+        <span class="fab fa-twitter"></span> Twitter
+      </a>
+      <a
+        mat-flat-button
+        color="accent"
+        href="https://telegram.me/almeriajs"
+      >
+        <span class="fab fa-telegram"></span> Telegram
+      </a>
+      <a
+        mat-flat-button
+        color="accent"
+        href="mailto:js@almeria.dev?subject=Hola AlmeríaJS"
+      >
+        <span class="fas fa-envelope"></span> js@almeria.dev
       </a>
     </p>
+    <h2>Con mucho swag</h2>
     <p>
-      Y como nunca tenemos suficientes aprovechamos para hacer camisetas frikis del evento, y con lo que recaudamos intentamos echar una mano a nuestros colegas peludos de Almería haciendo una donación a alguna perrera local. ¡Te animamos a que le eches un ojo a la galería, igual acabas renovando tu armario! 
+      Y como nunca tenemos suficiente, aprovechamos para hacer <strong>camisetas frikis</strong>, y con lo que recaudamos intentamos echar una mano a nuestros colegas peludos de Almería haciendo una donación a alguna perrera local. ¡Te animamos a que le eches un ojo a la galería, igual acabas renovando tu armario!
     </p>
     <p style=" text-align: center; ">
       <a
