--- a/src/app/shirts/containers/shirts/shirts.component.html
+++ b/src/app/shirts/containers/shirts/shirts.component.html
@@ -70,9 +70,9 @@
       <a
         mat-flat-button
         color="accent"
-        href="mailto:alvaro.quiros@gmail.com?subject=Hola AlmeríaJS"
+        href="mailto:js@almeria.dev?subject=Hola AlmeríaJS"
       >
-        <mat-icon>mail_outline</mat-icon> Envíanos un email
+        <mat-icon>mail_outline</mat-icon> Envíanos un email a js@almeria.dev
       </a>
     </div>
   </div>
