--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,4 +1,5 @@
-h1 {
+h1,
+h2 {
   color: #0276b8;
   padding: 64px 0 32px;
   text-align: center;
@@ -36,5 +37,14 @@ section {
     font-size: 20px;
     line-height: 32px;
     padding-bottom: 16px;
+  }
+}
+
+:host {
+  .links {
+    text-align: center;
+    .mat-flat-button {
+      margin: 6px;
+    }
   }
 }
