feat: add youtube links
remove shirts section
update texts

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,37 +1,20 @@
 <footer>
   <mat-toolbar>
     <mat-toolbar-row>
-      <a
-        mat-icon-button
-        color="accent"
-        href="https://www.meetup.com/es-ES/almeriajs"
-        target="_blank"
-      >
+      <a mat-icon-button color="accent" href="https://www.meetup.com/es-ES/almeriajs" target="_blank">
         <i class="fab fa-meetup"></i>
       </a>
-      <a
-        mat-icon-button
-        color="accent"
-        href="https://twitter.com/AlmeriaJs"
-        target="_blank"
-      >
+      <a mat-icon-button color="accent" href="https://twitter.com/AlmeriaJs" target="_blank">
         <i class="fab fa-twitter"></i>
       </a>
-      <a
-        mat-icon-button
-        color="accent"
-        href="https://github.com/AlmeriaJS"
-        target="_blank"
-      >
+      <a mat-icon-button color="accent" href="https://github.com/AlmeriaJS" target="_blank">
         <i class="fab fa-github"></i>
       </a>
-      <a
-        mat-icon-button
-        color="accent"
-        href="mailto:js@almeria.dev"
-        target="_blank"
-      >
+      <a mat-icon-button color="accent" href="mailto:js@almeria.dev" target="_blank">
         <i class="fas fa-envelope"></i>
+      </a>
+      <a mat-icon-button color="accent" href="https://www.youtube.com/channel/UCSXMOjxELFJfTwQtakD3t6g" target="_blank">
+        <i class="fab fa-youtube"></i>
       </a>
     </mat-toolbar-row>
   </mat-toolbar>
