--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,44 +2,48 @@
 
 <section id="home">
   <div class="container">
-    <p>Te damos la bienvenida a AlmeríaJS.</p>
-    <p>Somos un grupo de apasionados de la tecnología que nos juntamos cada vez que tenemos ocasión para hablar de cualquier tema relacionado con Javascript.</p>
-    <p>Si quieres colaborar de cualquier manera con el grupo, ya sea dando una charla, compartiendo el contenido, o cualquier cosa que se te ocurra, te lo agradecemos.</p>
+    <p>¡Te damos la bienvenida a <b>AlmeríaJS</b>!</p>
+    <p>
+      Somos un grupo de apasionados de la tecnología que nos juntamos (física o virtualmente) cada vez que tenemos
+      ocasión para hablar de cualquier tema relacionado con Javascript, frameworks, librerías, cualquier tipo de
+      herramienta o incluso servicios para explotar nuestas aplicaiones web.
+    </p>
+    <p>
+      Solemos terminar con lo que más nos gusta, networking con 🍻
+    </p>
+    <p>
+      ¡ Este mes cumplimos 3 años 🎂!
+    </p>
     <p class="links">
-      <a
-        mat-flat-button
-        color="accent"
-        href="https://twitter.com/almeriajs"
-      >
+      <a mat-flat-button color="accent" href="https://twitter.com/almeriajs">
         <span class="fab fa-twitter"></span> Twitter
       </a>
-      <a
-        mat-flat-button
-        color="accent"
-        href="https://telegram.me/almeriajs"
-      >
+      <a mat-flat-button color="accent" href="https://telegram.me/almeriajs">
         <span class="fab fa-telegram"></span> Telegram
       </a>
-      <a
-        mat-flat-button
-        color="accent"
-        href="mailto:js@almeria.dev?subject=Hola AlmeríaJS"
-      >
+      <a mat-flat-button color="accent" href="mailto:js@almeria.dev?subject=Hola AlmeríaJS">
         <span class="fas fa-envelope"></span> js@almeria.dev
       </a>
+      <a mat-flat-button color="accent" href="https://www.youtube.com/channel/UCSXMOjxELFJfTwQtakD3t6g">
+        <span class="fab fa-youtube"></span> Youtube
+      </a>
     </p>
-    <h2>Con mucho swag</h2>
+    <h2>¿Quieres dar una charla con nosotros?</h2>
     <p>
-      Y como nunca tenemos suficiente, aprovechamos para hacer <strong>camisetas frikis</strong>, y con lo que recaudamos intentamos echar una mano a nuestros colegas peludos de Almería haciendo una donación a alguna perrera local. ¡Te animamos a que le eches un ojo a la galería, igual acabas renovando tu armario!
+      No necesitas ser el fundador de un framework con 30k stargazers para poder subirte a un escenario (o enchufarte la
+      webcam) y contarle a la gente alguna herramienta o framework con el que estés trabajando últimamente o esa nueva
+      librería que han publicado en npm.
+    </p>
+    <p>
+      Tampoco es necesario ser un ponentes experimentado para hablar en este grupo, de hecho en estos años 10 personas
+      han dado su primera charla en nuestro grupo.
+    </p>
+    <p>
+      Además os podemos echar una mano a prepararla si no tenéis mucha experiencia.
     </p>
     <p style=" text-align: center; ">
-      <a
-        mat-flat-button
-        color="primary"
-        [routerLink]="['/camisetas']"
-        routerLinkActive="router-link-active"
-      >
-        <mat-icon>link</mat-icon> Ver las camisetas de AlmeríaJS
+      <a href="forms.gle/FNnbFdj3bng2U15A9" mat-flat-button color="primary">
+        <mat-icon>link</mat-icon> Propón una charla
       </a>
     </p>
   </div>
