--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,37 +2,25 @@
   <mat-toolbar>
     <mat-toolbar-row>
       <span style=" flex: 1 1 auto; ">
-        <a mat-flat-button [routerLink]="['/']" routerLinkActive="router-link-active" >Inicio</a>
-        <a mat-flat-button [routerLink]="['/camisetas']" routerLinkActive="router-link-active" >Camisetas</a>
+        <a mat-flat-button [routerLink]="['/']" routerLinkActive="router-link-active">Inicio</a>
+        <!-- <a mat-flat-button [routerLink]="['/camisetas']" routerLinkActive="router-link-active" >Camisetas</a> -->
       </span>
       <span>
-        <a
-          mat-icon-button
-          color="accent"
-          href="https://www.meetup.com/es-ES/almeriajs"
-          target="_blank"
-        >
+        <a mat-icon-button color="accent" href="https://www.meetup.com/es-ES/almeriajs" target="_blank">
           <i class="fab fa-meetup"></i>
         </a>
-        <a
-          mat-icon-button
-          color="accent"
-          href="https://twitter.com/AlmeriaJs"
-          target="_blank"
-        >
+        <a mat-icon-button color="accent" href="https://twitter.com/AlmeriaJs" target="_blank">
           <i class="fab fa-twitter"></i>
         </a>
-        <a
-          mat-icon-button
-          color="accent"
-          href="https://github.com/AlmeriaJS"
-          target="_blank"
-        >
+        <a mat-icon-button color="accent" href="https://github.com/AlmeriaJS" target="_blank">
           <i class="fab fa-github"></i>
-        </a>  
+        </a>
+        <a mat-icon-button color="accent" href="https://www.youtube.com/channel/UCSXMOjxELFJfTwQtakD3t6g">
+          <i class="fab fa-youtube"></i>
+        </a>
       </span>
     </mat-toolbar-row>
-  </mat-toolbar>    
+  </mat-toolbar>
 </nav>
 
 <header>
