feat: update to Angular v9.X
closes #7

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,19 +12,19 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$almeriajs-t-shirts-primary: mat-palette($mat-yellow);
-$almeriajs-t-shirts-accent: mat-palette($mat-blue);
+$almeriajs-primary: mat-palette($mat-yellow);
+$almeriajs-accent: mat-palette($mat-blue);
 
 // The warn palette is optional (defaults to red).
-$almeriajs-t-shirts-warn: mat-palette($mat-red);
+$almeriajs-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$almeriajs-t-shirts-theme: mat-light-theme($almeriajs-t-shirts-primary, $almeriajs-t-shirts-accent, $almeriajs-t-shirts-warn);
+$almeriajs-theme: mat-light-theme($almeriajs-primary, $almeriajs-accent, $almeriajs-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($almeriajs-t-shirts-theme);
+@include angular-material-theme($almeriajs-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
