--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -42,7 +42,7 @@
       Además os podemos echar una mano a prepararla si no tenéis mucha experiencia.
     </p>
     <p style=" text-align: center; ">
-      <a href="forms.gle/FNnbFdj3bng2U15A9" mat-flat-button color="primary">
+      <a href="https://forms.gle/FNnbFdj3bng2U15A9" mat-flat-button color="primary">
         <mat-icon>link</mat-icon> Propón una charla
       </a>
     </p>
