--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,20 +1,20 @@
 <footer>
   <mat-toolbar>
     <mat-toolbar-row>
-      <a mat-icon-button color="accent" href="https://www.meetup.com/es-ES/almeriajs" target="_blank">
+      <a mat-icon-button class="icon" href="https://www.meetup.com/es-ES/almeriajs" target="_blank">
         <i class="fab fa-meetup"></i>
       </a>
-      <a mat-icon-button color="accent" href="https://twitter.com/AlmeriaJs" target="_blank">
+      <a mat-icon-button class="icon" href="https://twitter.com/AlmeriaJs" target="_blank">
         <i class="fab fa-twitter"></i>
       </a>
-      <a mat-icon-button color="accent" href="https://github.com/AlmeriaJS" target="_blank">
+      <a mat-icon-button class="icon" href="https://github.com/AlmeriaJS" target="_blank">
         <i class="fab fa-github"></i>
       </a>
-      <a mat-icon-button color="accent" href="mailto:js@almeria.dev" target="_blank">
-        <i class="fas fa-envelope"></i>
-      </a>
-      <a mat-icon-button color="accent" href="https://www.youtube.com/channel/UCSXMOjxELFJfTwQtakD3t6g" target="_blank">
+      <a mat-icon-button class="icon" href="https://www.youtube.com/channel/UCSXMOjxELFJfTwQtakD3t6g">
         <i class="fab fa-youtube"></i>
+      </a>
+      <a mat-icon-button class="icon" href="mailto:js@almeria.dev?subject=Hola AlmeríaJS">
+        <i class="fas fa-envelope"></i>
       </a>
     </mat-toolbar-row>
   </mat-toolbar>
