--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,6 +1,5 @@
 h1,
 h2 {
-  color: #0276b8;
   padding: 64px 0 32px;
   text-align: center;
   font-size: 50px;
@@ -8,22 +7,6 @@ h2 {
 }
 section {
   padding: 32px;
-  &#catalog {
-    background-color: #f5f5f5;
-    padding: 64x 32px;
-    h3 {
-      text-align: center;
-    }
-  }
-  &#sizes,
-  &#price {
-    .links {
-      text-align: center;
-      a {
-        margin: 8px;
-      }
-    }
-  }
   &#contact {
     text-align: center;
   }
@@ -33,10 +16,14 @@ section {
     padding-bottom: 32px;
   }
   p {
+    color: #575457;
     margin: 0;
     font-size: 20px;
     line-height: 32px;
     padding-bottom: 16px;
+  }
+  b {
+    font-size: 25px;
   }
 }
 
@@ -47,4 +34,33 @@ section {
       margin: 6px;
     }
   }
+}
+
+.span {
+  background-color: #f7b500;
+  font-weight: bold;
+  color: black;
+}
+
+.logo {
+  width: 150px;
+}
+
+.link {
+  margin-right: 0;
+  height: 80px;
+  color: #575457;
+  font-size: 20px;
+  text-align: right;
+  padding: 0;
+  img {
+    width: 80px;
+  }
+}
+
+::ng-deep .mat-step-header .mat-step-icon {
+  background-color: lightgrey;
+}
+::ng-deep .mat-step-header .mat-step-icon-selected {
+  background-color: #f7b500;
 }
