feat: add linkedin link

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -13,6 +13,9 @@
       <a mat-icon-button class="icon" href="https://www.youtube.com/channel/UCSXMOjxELFJfTwQtakD3t6g">
         <i class="fab fa-youtube"></i>
       </a>
+      <a mat-icon-button class="icon" href="https://www.linkedin.com/company/almeriajs" target="_blank">
+        <i class="fab fa-linkedin"></i>
+      </a>
       <a mat-icon-button class="icon" href="mailto:js@almeria.dev?subject=Hola AlmeríaJS">
         <i class="fas fa-envelope"></i>
       </a>
