--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -33,8 +33,8 @@
               <img [src]="talk.image" alt="cartel del evento" />
             </mat-card-content>
 
-            <mat-card-actions class="link" *ngIf="talk.link">
-              <a mat-button [href]="talk.link" 
+            <mat-card-actions class="link" >
+              <a *ngIf="talk.link" mat-button [href]="talk.link" 
                 >Apúntate al evento en <img src="/assets/images/logos/meetup_logo.png" alt="meetup"
               /></a>
             </mat-card-actions>
