--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,11 +15,14 @@
         ¡ Este mes cumplimos 3 años 🎂!
       </p>
     </div>
-    <div>
-      <video src="/assets/images/videoJS.mp4" width="100%" height="100%" autoplay loop>
-        Lo sentimos. Este vídeo no puede ser reproducido en tu navegador.<br />
-        La versión descargable está disponible en <a href="URL">Enlace</a>.
-      </video>
+    <div class="video">
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/nndmXldbtGE?start=5"
+        frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+      ></iframe>
     </div>
     <div>
       <h2>Próximos eventos</h2>
@@ -33,8 +36,8 @@
               <img [src]="talk.image" alt="cartel del evento" />
             </mat-card-content>
 
-            <mat-card-actions class="link" >
-              <a *ngIf="talk.link" mat-button [href]="talk.link" 
+            <mat-card-actions class="link">
+              <a *ngIf="talk.link" mat-button [href]="talk.link"
                 >Apúntate al evento en <img src="/assets/images/logos/meetup_logo.png" alt="meetup"
               /></a>
             </mat-card-actions>
