--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -58,6 +58,20 @@ section {
   }
 }
 
+.video {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 ::ng-deep .mat-step-header .mat-step-icon {
   background-color: lightgrey;
 }
