--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,12 +8,8 @@
         ocasión para hablar de cualquier tema relacionado con Javascript, frameworks, librerías, cualquier tipo de
         herramienta o incluso servicios para explotar nuestas aplicaiones web.
       </p>
-      <p>
-        Solemos terminar con lo que más nos gusta, networking con 🍻
-      </p>
-      <p>
-        ¡ Este mes cumplimos 3 años 🎂!
-      </p>
+      <p>Solemos terminar con lo que más nos gusta, networking con 🍻</p>
+      <p>¡ Ya llevamos haciéndolo 4 años 🎂!</p>
     </div>
     <div class="video">
       <iframe
@@ -24,7 +20,7 @@
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
       ></iframe>
     </div>
-    <div>
+    <!-- <div>
       <h2>Próximos eventos</h2>
       <mat-horizontal-stepper #stepper>
         <ng-template matStepperIcon="edit">
@@ -44,7 +40,7 @@
           </mat-card>
         </mat-step>
       </mat-horizontal-stepper>
-    </div>
+    </div> -->
     <div>
       <h2>¿Quieres dar una charla con nosotros?</h2>
       <p>
@@ -56,10 +52,8 @@
         Tampoco es necesario ser un ponentes experimentado para hablar en este grupo, de hecho en estos años 10 personas
         han dado su primera charla en nuestro grupo.
       </p>
-      <p>
-        Además os podemos echar una mano a prepararla si no tenéis mucha experiencia.
-      </p>
-      <p style="text-align: center;">
+      <p>Además os podemos echar una mano a prepararla si no tenéis mucha experiencia.</p>
+      <p style="text-align: center">
         <a href="https://forms.gle/FNnbFdj3bng2U15A9" mat-flat-button class="span">
           <mat-icon>link</mat-icon> Propón una charla
         </a>
@@ -68,31 +62,22 @@
 
     <div>
       <h2>Sponsors y colaboradores</h2>
-      <p>
-        Queremos agradecer a nuestros sponsors el hacer esto posible.
-      </p>
-      <p style="text-align: center;">
-        <a href=" http://coderty.ninja/" mat-flat-button class="logo"
+      <p>Queremos agradecer a nuestros sponsors el hacer esto posible.</p>
+      <p style="text-align: center">
+        <a href="https://coderty.com/" mat-flat-button class="logo"
           ><img src="/assets/images/logos/coderty.png" alt="coderty-logo"
         /></a>
-        <a href="https://www.digital55.com/" mat-flat-button class="logo"
-          ><img src="/assets/images/logos/digital55.png" alt="digital55-logo"
-        /></a>
-        <a href="https://twenix.es/" mat-flat-button class="logo"
-          ><img src="/assets/images/logos/twenix.png" alt="twenix-logo"
-        /></a>
-        <a href="https://soyun.ninja/" mat-flat-button class="logo"
-          ><img src="/assets/images/logos/soyunninja.png" alt="soyunninja-logo"
+        <a href="https://runnerty.io/" mat-flat-button class="logo"
+          ><img src="/assets/images/logos/runnerty.png" alt="runnerty-logo"
         /></a>
       </p>
-      <p>
-        Y agradecer por supuesto la colaboración de nuestros queridos amigos de La Oficina, que son los que
-        habitualmente nos invitan a realizar el evento presencial en su local, el cuál debéis visitar si tenéis
-        oportunidad.
-      </p>
-      <p style="text-align: center;">
-        <a href="http://laoficinacultural.org/" mat-flat-button class="logo"
+      <p>También a nuestras amigas y amigos por ayudarnos.</p>
+      <p style="text-align: center">
+        <a href="http://laoficinacultural.org/" mat-flat-button class="logo-amigos"
           ><img src="/assets/images/logos/LaOficina-logo.jpg" alt="LaOficina-logo"
+        /></a>
+        <a href="http://soyun.ninja/" mat-flat-button class="logo-amigos"
+          ><img src="/assets/images/logos/soyunninja.png" alt="Logo ninja"
         /></a>
       </p>
     </div>
